--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -659,12 +659,9 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"កំណត់លំនាំសម្រាប់លំហឯកជនរបស់អ្នក"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"ចាក់សោ"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"លាក់"</string>
-    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
-    <skip />
+    <string name="private_space_confirm_your_pattern_header" msgid="449382220134788771">"បញ្ជាក់លំនាំលំហឯកជនរបស់អ្នក"</string>
+    <string name="private_space_confirm_your_pin_header" msgid="4543332157470087796">"បញ្ចូលកូដ PIN លំហឯកជនរបស់អ្នកម្ដងទៀត"</string>
+    <string name="private_space_confirm_your_password_header" msgid="9202308075814307169">"បញ្ចូលពាក្យសម្ងាត់លំហឯកជនរបស់អ្នកម្ដងទៀត"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"អ្នកអាចបញ្ចូលស្នាមម្រាមដៃបានត្រឹម <xliff:g id="COUNT">%d</xliff:g>"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"អ្នក​បាន​បញ្ចូល​ស្នាម​ម្រាមដៃ​ដល់​ចំនួន​អតិបរមា​ហើយ"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"មិន​អាច​បញ្ចូល​ស្នាម​ម្រាមដៃ​បាន​ទៀត​ទេ"</string>
@@ -1032,10 +1029,8 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"ពិនិត្យមើល​ពាក្យសម្ងាត់ រួច​ព្យាយាម​ម្តងទៀត"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"ទាក់ទង​ក្រុមហ៊ុនផលិត​ឧបករណ៍"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"សូម​ពិនិត្យមើល​ការតភ្ជាប់ រួចព្យាយាម​ម្ដងទៀត"</string>
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
-    <skip />
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
-    <skip />
+    <string name="wifi_dpp_check_connection_no_matched_ssid" msgid="3608318690698685427">"មិនអាចប្រើបណ្ដាញ Wi‑Fi នេះនៅពេលនេះបានទេ"</string>
+    <string name="wifi_dpp_check_connection_no_matched_security" msgid="1462706753123341376">"មានបញ្ហាទាក់ទងនឹងកូដ QR នេះ។ សូមសាកល្បងភ្ជាប់តាមវិធីផ្សេង។"</string>
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"ជ្រើសរើស​បណ្តាញ"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"ដើម្បីភ្ជាប់​ឧបករណ៍របស់អ្នក សូមជ្រើសរើសបណ្ដាញ"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"បញ្ចូលឧបករណ៍នេះ​ទៅ “<xliff:g id="SSID">%1$s</xliff:g>”?"</string>
@@ -1951,13 +1946,26 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"ភាពងាយស្រួល"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"ក្ដារចុច​រូបវ័ន្ត"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"គ្រាប់ចុចឡង"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"ក្ដារចុចមិនអើពើនឹងការចុចដដែលៗយ៉ាងរហ័សនៃគ្រាប់ចុចដដែលក្នុងរយៈពេល <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> មិល្លីវិនាទី"</string>
+    <!-- no translation found for bounce_keys_summary (7418024428905737729) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_title (4088646362538368693) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_subtitle (5640575860258120026) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_option_200 (7876774697200082558) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_option_400 (8146580138675322657) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_option_600 (6166166103942612488) -->
+    <skip />
     <string name="slow_keys" msgid="2891452895499690837">"គ្រាប់ចុចយឺត"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"កែតម្រូវរយៈពេលនៃការចុចគ្រាប់ចុចដើម្បីបើកដំណើរការទៅ <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> មិល្លីវិនាទី"</string>
+    <!-- no translation found for slow_keys_summary (2914214326648535377) -->
+    <skip />
     <string name="sticky_keys" msgid="7317317044898161747">"គ្រាប់ចុចស្អិត"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"ចុចគ្រាប់ចុចមួយក្នុងមួយលើកសម្រាប់ផ្លូវកាត់ជំនួសឱ្យការចុចគ្រាប់ចុចឱ្យជាប់រួមគ្នា"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"គ្រាប់ចុច​ម៉ៅស៍"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"ប្រើក្ដារចុចរូបវន្ត ដើម្បីគ្រប់គ្រងម៉ៅស៍។"</string>
+    <!-- no translation found for mouse_keys_summary (7030731235143286467) -->
+    <skip />
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"ផ្លូវកាត់ក្តារចុច"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"បង្ហាញបញ្ជីផ្លូវកាត់"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"ឧបករណ៍ និងក្ដារចុច​កម្រងព័ត៌មាន​ការងារ"</string>
@@ -2026,6 +2034,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"ជ្រើសរើសប៊ូតុងថ្មីសម្រាប់ <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>៖"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"ភាពងាយស្រួលប្រើប្រាស់ក្ដារចុចរូបវន្ត"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"គ្រាប់ចុចស្អិត គ្រាប់ចុចលោត គ្រាប់ចុចម៉ៅស៍"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"ប្លង់ <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"លំនាំដើម"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"ស្វ័យប្រវត្តិ៖ <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2430,7 +2442,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"មើលសាកល្បង"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"ជម្រើស​ស្តង់​ដារ​"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"ភាសា"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"ទំហំ​អក្សរ"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"រចនាប័ទ្ម​អក្សររត់"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"ជម្រើស​តាម​តម្រូវ​ការ"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"ពណ៌​ផ្ទៃ​ខាងក្រោយ"</string>
@@ -3906,8 +3919,7 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"បង្កើតមុខងារ"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"មុខងារផ្ទាល់ខ្លួន"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"ឈ្មោះមុខងារ"</string>
-    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
-    <skip />
+    <string name="zen_mode_edit_name_empty_error" msgid="5788063278827188275">"ឈ្មោះមុខងារមិនអាចទទេបានឡើយ"</string>
     <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"ជ្រើសរើស​រូបតំណាង"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"ព្រឹត្តិការណ៍ក្នុង​ប្រតិទិន"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"ទម្លាប់​នៅម៉ោងគេង"</string>
@@ -5450,5 +5462,13 @@
     <string name="homepage_search" msgid="6759334912284663559">"ស្វែងរកការកំណត់"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"contacts, ទំហំ​ផ្ទុក, គណនី"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"ទំហំផ្ទុក Contacts"</string>
+    <!-- no translation found for contacts_storage_device_only_preference_label (970250816918108264) -->
+    <skip />
+    <!-- no translation found for contacts_storage_device_only_preference_summary (2339782491812039153) -->
+    <skip />
+    <!-- no translation found for contacts_storage_selection_message (8082077300632059003) -->
+    <skip />
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"មិន​បាន​កំណត់​លំនាំដើម"</string>
+    <!-- no translation found for contacts_storage_first_time_add_account_message (5161093169928132323) -->
+    <skip />
 </resources>
