--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -659,12 +659,9 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"প্ৰাইভেট স্পেচৰ বাবে এটা আৰ্হি ছেট কৰক"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"লক কৰক"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"লুকুৱাওক"</string>
-    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
-    <skip />
+    <string name="private_space_confirm_your_pattern_header" msgid="449382220134788771">"আপোনাৰ প্ৰাইভেট স্পে’চৰ আৰ্হি নিশ্চিত কৰক"</string>
+    <string name="private_space_confirm_your_pin_header" msgid="4543332157470087796">"আপোনাৰ প্ৰাইভেট স্পে’চৰ পিন পুনৰ দিয়ক"</string>
+    <string name="private_space_confirm_your_password_header" msgid="9202308075814307169">"আপোনাৰ প্ৰাইভেট স্পে’চৰ পাছৱৰ্ড পুনৰ দিয়ক"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"আপুনি <xliff:g id="COUNT">%d</xliff:g> টালৈকে ফিংগাৰপ্ৰিণ্ট যোগ কৰিব পাৰে"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"আপুনি সৰ্বাধিক সংখ্যক ফিংগাৰপ্ৰিণ্টবোৰ যোগ কৰিছে"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"আৰু অধিক ফিংগাৰপ্ৰিণ্ট যোগ কৰিব নোৱাৰি"</string>
@@ -1032,10 +1029,8 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"পাছৱৰ্ডটো পৰীক্ষা কৰক আৰু পুনৰ চেষ্টা কৰক"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"ডিভাইচ নিৰ্মাতাৰ সৈতে যোগাযোগ কৰক"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"সংযোগ পৰীক্ষা কৰি আকৌ চেষ্টা কৰক"</string>
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
-    <skip />
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
-    <skip />
+    <string name="wifi_dpp_check_connection_no_matched_ssid" msgid="3608318690698685427">"এই ৱাই-ফাই নেটৱৰ্ক এই মূহুৰ্তত উপলব্ধ নহয়"</string>
+    <string name="wifi_dpp_check_connection_no_matched_security" msgid="1462706753123341376">"এই QR ক’ডটোত কিবা সমস্যা আছে। অন্য উপায়েৰে সংযোগ কৰি চাওক।"</string>
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"নেটৱৰ্ক বাছনি কৰক"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"আপোনাৰ ডিভাইচটো সংযোগ কৰিবলৈ এটা নেটৱৰ্ক বাছনি কৰক"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"এই ডিভাইচটো “<xliff:g id="SSID">%1$s</xliff:g>”ত যোগ কৰিবনে?"</string>
@@ -1951,13 +1946,18 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"সাধ্য সুবিধা"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"কায়িক কীব\'ৰ্ড"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"বাউন্স কী"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"কীব’ৰ্ডে <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> এমএছৰ ভিতৰত একেটা কী ক্ষিপ্ৰতাৰে বাৰে বাৰে টিপাটো উপেক্ষা কৰে"</string>
+    <string name="bounce_keys_summary" msgid="7418024428905737729">"কীব’ৰ্ডে একেটা কী ক্ষিপ্ৰতাৰে বাবে বাৰে টিপাটো আওকাণ কৰে"</string>
+    <string name="bounce_keys_dialog_title" msgid="4088646362538368693">"বাউন্স কীৰ সীমা"</string>
+    <string name="bounce_keys_dialog_subtitle" msgid="5640575860258120026">"সেই সময় অৱধি বাছনি কৰক যেতিয়া আপোনাৰ কীব’ৰ্ডে বাৰে বাৰে কী টিপাটো আওকাণ কৰে"</string>
+    <string name="bounce_keys_dialog_option_200" msgid="7876774697200082558">"০.২ ছেকেণ্ড"</string>
+    <string name="bounce_keys_dialog_option_400" msgid="8146580138675322657">"০.৪ ছেকেণ্ড"</string>
+    <string name="bounce_keys_dialog_option_600" msgid="6166166103942612488">"০.৬ ছেকেণ্ড"</string>
     <string name="slow_keys" msgid="2891452895499690837">"ধীৰ গতিৰ কী"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"<xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> এমএছ সক্ৰিয় কৰিবলৈ এটা কী টিপাৰ বাবে লগা সময় মিলাওক"</string>
+    <string name="slow_keys_summary" msgid="2914214326648535377">"সক্ৰিয় কৰিবলৈ এটা কী টিপাৰ বাবে লগা সময় মিলায়"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"ষ্টিকী কী"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"একেলগে কীসমূহ টিপি ধৰি থকাৰ সলনি শ্বৰ্টকাটৰ বাবে এবাৰত এটা কী টিপক"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"মাউছ কীসমূহ"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"মাউছটো নিয়ন্ত্ৰণ কৰিবলৈ কায়িক কীব\'ৰ্ড ব্যৱহাৰ কৰক।"</string>
+    <string name="mouse_keys_summary" msgid="7030731235143286467">"পইণ্টাৰ নিয়ন্ত্ৰণ কৰিবলৈ আপোনাৰ কীব’ৰ্ড ব্যৱহাৰ কৰক"</string>
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"কীব’ৰ্ডৰ শ্বৰ্টকাটসমূহ"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"শ্বৰ্টকাটৰ সূচী দেখুৱাওক"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"কৰ্মস্থানৰ প্ৰ’ফাইল আৰু সঁজুলি"</string>
@@ -2026,6 +2026,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>ৰ বাবে এটা নতুন চাবি বাছনি কৰক:"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"কায়িক কীব’ৰ্ডৰ সাধ্য সুবিধা"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"ষ্টিকী কী, বাউন্স কী, মাউছ কী"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"<xliff:g id="IME_LABEL">%s</xliff:g> লে’আউট"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"ডিফ\'ল্ট"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"স্বয়ংক্ৰিয়: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2430,7 +2434,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"পূৰ্বদৰ্শন"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"মান্য বিকল্পসমূহ"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"ভাষা"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"পাঠৰ আকাৰ"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"কেপশ্বন শৈলী"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"কাষ্টম বিকল্পসমূহ"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"বেকগ্ৰাউণ্ডৰ ৰং"</string>
@@ -3906,8 +3911,7 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"এটা ম’ড সৃষ্টি কৰক"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"কাষ্টম ক’ড"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"ম’ডৰ নাম"</string>
-    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
-    <skip />
+    <string name="zen_mode_edit_name_empty_error" msgid="5788063278827188275">"ম’ডৰ নাম খালী থাকিব নোৱাৰে"</string>
     <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"কোনো চিহ্ন বাছনি কৰক"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"কেলেণ্ডাৰৰ অনুষ্ঠান"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"শোৱাৰ সময়ৰ ৰুটিন"</string>
@@ -5450,5 +5454,9 @@
     <string name="homepage_search" msgid="6759334912284663559">"সন্ধানৰ ছেটিংসমূহ"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"সম্পর্ক, ষ্ট’ৰেজ, একাউণ্ট"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"সম্পৰ্কৰ ষ্ট’ৰেজ"</string>
+    <string name="contacts_storage_device_only_preference_label" msgid="970250816918108264">"ডিভাইচ মাত্ৰ"</string>
+    <string name="contacts_storage_device_only_preference_summary" msgid="2339782491812039153">"নতুন সম্পৰ্কসমূহ একাউণ্টৰ সৈতে ছিংক কৰা নহ’ব"</string>
+    <string name="contacts_storage_selection_message" msgid="8082077300632059003">"সম্পৰ্কসমূহ আপোনাৰ ডিভাইচত ছেভ কৰা হ’ব আৰু ডিফ’ল্টভাৱে আপোনাৰ একাউণ্টত ছিংক কৰা হ’ব"</string>
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"কোনো ডিফ\'ল্ট ছেট কৰা হোৱা নাই"</string>
+    <string name="contacts_storage_first_time_add_account_message" msgid="5161093169928132323">"আৰম্ভ কৰিবলৈ এটা একাউণ্ট যোগ দিয়ক"</string>
 </resources>
