--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -659,12 +659,9 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"আপনার প্রাইভেট স্পেসের জন্য প্যাটার্ন সেট করুন"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"লক"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"লুকান"</string>
-    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
-    <skip />
+    <string name="private_space_confirm_your_pattern_header" msgid="449382220134788771">"আপনার প্রাইভেট স্পেসের প্যাটার্ন কনফার্ম করুন"</string>
+    <string name="private_space_confirm_your_pin_header" msgid="4543332157470087796">"আপনার প্রাইভেট স্পেসের পিন আবার লিখুন"</string>
+    <string name="private_space_confirm_your_password_header" msgid="9202308075814307169">"আপনার প্রাইভেট স্পেসের পাসওয়ার্ড আবার লিখুন"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"আপনি সর্বাধিক <xliff:g id="COUNT">%d</xliff:g>টি ফিঙ্গারপ্রিন্ট যোগ করতে পারবেন"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"আপনি অনুমোদিত সর্বোচ্চ সংখ্যক আঙ্গুলের ছাপ যোগ করেছেন"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"এর বেশি আঙ্গুলের ছাপ যোগ করা যাবে না"</string>
@@ -1032,10 +1029,8 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"পাসওয়ার্ড দেখে নিয়ে আবার চেষ্টা করুন"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"ডিভাইস প্রস্তুতকারকের সাথে যোগাযোগ করুন"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"কানেকশন দেখে নিয়ে আবার চেষ্টা করুন"</string>
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
-    <skip />
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
-    <skip />
+    <string name="wifi_dpp_check_connection_no_matched_ssid" msgid="3608318690698685427">"এই ওয়াই-ফাই নেটওয়ার্ক এই মুহূর্তে উপলভ্য নেই"</string>
+    <string name="wifi_dpp_check_connection_no_matched_security" msgid="1462706753123341376">"এই QR কোডে কোনও সমস্যা আছে। অন্যভাবে কানেক্ট করে দেখুন।"</string>
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"নেটওয়ার্ক বেছে নিন"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"আপনার ডিভাইস কানেক্ট করতে নেটওয়ার্ক বেছে নিন"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"এই ডিভাইস “<xliff:g id="SSID">%1$s</xliff:g>”-এ যোগ করতে চান?"</string>
@@ -1951,13 +1946,18 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"অ্যাক্সেসিবিলিটি"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"ফিজিক্যাল কীবোর্ড"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"বাউন্স \'কী\'"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"<xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> মিলি সেকেন্ডের মধ্যে একই কী বারবার প্রেস করলে তা কীবোর্ড উপেক্ষা করে"</string>
+    <string name="bounce_keys_summary" msgid="7418024428905737729">"একই \'কী\' দ্রুত বারবার প্রেস করলে কীবোর্ড তা উপেক্ষা করে"</string>
+    <string name="bounce_keys_dialog_title" msgid="4088646362538368693">"বাউন্স কী থ্রেশহোল্ড"</string>
+    <string name="bounce_keys_dialog_subtitle" msgid="5640575860258120026">"আপনার কীবোর্ড কতক্ষণ পর্যন্ত কোনও একটি \'কী\' বারবার প্রেস করার ঘটনাকে উপেক্ষা করে সেই সময়সীমা বেছে নিন"</string>
+    <string name="bounce_keys_dialog_option_200" msgid="7876774697200082558">"০.২ সেকেন্ড"</string>
+    <string name="bounce_keys_dialog_option_400" msgid="8146580138675322657">"০.৪ সেকেন্ড"</string>
+    <string name="bounce_keys_dialog_option_600" msgid="6166166103942612488">"০.৬ সেকেন্ড"</string>
     <string name="slow_keys" msgid="2891452895499690837">"স্লো \'কী\'"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"কোনও কী প্রেস করলে সেটি অ্যাক্টিভেট হতে যে সময় লাগে তা <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> মিলি সেকেন্ডে অ্যাডজাস্ট হয়"</string>
+    <string name="slow_keys_summary" msgid="2914214326648535377">"কোনও কী প্রেস করলে সেটি অ্যাক্টিভেট হতে যে সময় লাগে তা অ্যাডজাস্ট করে নেয়"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"স্টিকি \'কী\'"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"শর্টকাটের জন্য কীগুলি একসাথে ধরে রাখার পরিবর্তে একবারে একটি কী প্রেস করুন"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"মাউস \'কী\'"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"মাউস কন্ট্রোল করতে ফিজিক্যাল কীবোর্ড ব্যবহার করুন।"</string>
+    <string name="mouse_keys_summary" msgid="7030731235143286467">"পয়েন্টার নিয়ন্ত্রণ করতে আপনার কীবোর্ড ব্যবহার করুন"</string>
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"কীবোর্ড শর্টকাট"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"শর্টকাটের তালিকা দেখান"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"অফিসের প্রোফাইলের কীবোর্ড ও টুল"</string>
@@ -2026,6 +2026,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>-এর জন্য নতুন \'কী\' বেছে নিন:"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"ফিজিক্যাল কীবোর্ডের অ্যাক্সেসিবিলিটি"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"স্টিকি কী, বাউন্স কী, মাউস কী"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"<xliff:g id="IME_LABEL">%s</xliff:g> লেআউট"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"ডিফল্ট"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"অটোমেটিক: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2430,7 +2434,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"প্রিভিউ"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"মানক বিকল্পগুলি"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"ভাষা"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"টেক্সট সাইজ"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"ক্যাপশনের স্টাইল"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"কাস্টম বিকল্পগুলি"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"পশ্চাদপটের রঙ"</string>
@@ -3906,8 +3911,7 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"মোড তৈরি করুন"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"কাস্টম মোড"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"মোডের নাম"</string>
-    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
-    <skip />
+    <string name="zen_mode_edit_name_empty_error" msgid="5788063278827188275">"মোডের নাম খালি রাখা যাবে না"</string>
     <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"একটি আইকন বেছে নিন"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"ক্যালেন্ডার ইভেন্ট"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"বেডটাইম রুটিন"</string>
@@ -5450,5 +5454,9 @@
     <string name="homepage_search" msgid="6759334912284663559">"সেটিংস সার্চ করুন"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"পরিচিতি, স্টোরেজ, অ্যাকাউন্ট"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"পরিচিতি সংক্রান্ত স্টোরেজ"</string>
+    <string name="contacts_storage_device_only_preference_label" msgid="970250816918108264">"শুধুমাত্র ডিভাইস"</string>
+    <string name="contacts_storage_device_only_preference_summary" msgid="2339782491812039153">"অ্যাকাউন্টের সাথে নতুন পরিচিতি সিঙ্ক হবে না"</string>
+    <string name="contacts_storage_selection_message" msgid="8082077300632059003">"সাধারণত, পরিচিতি আপনার ডিভাইসে সেভ হবে এবং আপনার অ্যাকাউন্টের সাথে সিঙ্ক হবে"</string>
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"কোনও ডিফল্ট অ্যাকাউন্ট সেট করা নেই"</string>
+    <string name="contacts_storage_first_time_add_account_message" msgid="5161093169928132323">"শুরু করতে একটি অ্যাকাউন্ট যোগ করুন"</string>
 </resources>
