--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -659,12 +659,9 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Nastavte vzor pro svůj soukromý prostor"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Zamykání"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Skrytí"</string>
-    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
-    <skip />
+    <string name="private_space_confirm_your_pattern_header" msgid="449382220134788771">"Potvrďte gesto soukromého prostoru"</string>
+    <string name="private_space_confirm_your_pin_header" msgid="4543332157470087796">"Znovu zadejte PIN soukromého prostoru"</string>
+    <string name="private_space_confirm_your_password_header" msgid="9202308075814307169">"Znovu zadejte heslo soukromého prostoru"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Maximální počet otisků prstů, které lze přidat: <xliff:g id="COUNT">%d</xliff:g>"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Přidali jste maximální počet otisků prstů"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Další otisky prstů nelze přidat"</string>
@@ -1032,10 +1029,8 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Zkontrolujte heslo a zkuste to znovu"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Kontaktujte výrobce zařízení"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Zkontrolujte připojení a zkuste to znovu"</string>
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
-    <skip />
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
-    <skip />
+    <string name="wifi_dpp_check_connection_no_matched_ssid" msgid="3608318690698685427">"Tato síť Wi-Fi momentálně není dostupná"</string>
+    <string name="wifi_dpp_check_connection_no_matched_security" msgid="1462706753123341376">"Došlo k problému s tímto QR kódem. Zkuste se připojit jinak."</string>
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Vybrat síť"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Chcete-li zařízení připojit, vyberte síť"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Přidat toto zařízení do sítě <xliff:g id="SSID">%1$s</xliff:g>?"</string>
@@ -1951,13 +1946,18 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"Přístupnost"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"Fyzická klávesnice"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"Ignorovat opakovaná stisknutí"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"Klávesnice ignoruje opakovaná stisknutí jedné klávesy do <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> ms"</string>
+    <string name="bounce_keys_summary" msgid="7418024428905737729">"Klávesnice ignoruje opakovaná stisknutí jedné klávesy"</string>
+    <string name="bounce_keys_dialog_title" msgid="4088646362538368693">"Limit opakovaného stisknutí"</string>
+    <string name="bounce_keys_dialog_subtitle" msgid="5640575860258120026">"Vyberte dobu, po kterou bude klávesnice ignorovat opakované stisknutí klávesy"</string>
+    <string name="bounce_keys_dialog_option_200" msgid="7876774697200082558">"0,2 s"</string>
+    <string name="bounce_keys_dialog_option_400" msgid="8146580138675322657">"0,4 s"</string>
+    <string name="bounce_keys_dialog_option_600" msgid="6166166103942612488">"0,6 s"</string>
     <string name="slow_keys" msgid="2891452895499690837">"Zpomalení kláves"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"Upraví čas aktivace po stisknutí klávesy na <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> ms"</string>
+    <string name="slow_keys_summary" msgid="2914214326648535377">"Upraví čas aktivace po stisknutí klávesy"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"Jedním prstem"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"Místo držení více kláves aktivujte zkratky postupným tisknutím jednotlivých kláves"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"Klávesy pro myš"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"Ovládání myši pomocí fyzické klávesnice"</string>
+    <string name="mouse_keys_summary" msgid="7030731235143286467">"Ukazatel můžete ovládat pomocí klávesnice"</string>
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"Klávesové zkratky"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"Zobrazit seznam zkratek"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"Klávesnice a nástroje v pracovním profilu"</string>
@@ -2026,6 +2026,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Vyberte novou klávesu pro <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"Přístupnost na fyzické klávesnici"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"Funkce Jedním prstem, klávesy pro opuštění, klávesy pro myš"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"Rozvržení <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Výchozí"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Automatické: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2430,7 +2434,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"Náhled"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"Standardní možnosti"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"Jazyk"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"Velikost písma"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"Styl titulků"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"Vlastní možnosti"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"Barva pozadí"</string>
@@ -3906,8 +3911,7 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Vytvoření režimu"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Vlastní režim"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Název režimu"</string>
-    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
-    <skip />
+    <string name="zen_mode_edit_name_empty_error" msgid="5788063278827188275">"Název režimu nemůže být prázdný"</string>
     <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Vyberte ikonu"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Události v kalendáři"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Sled činností Noční klid"</string>
@@ -5452,5 +5456,9 @@
     <string name="homepage_search" msgid="6759334912284663559">"Vyhledávat v nastavení"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"kontakty, úložiště, účet"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Úložiště kontaktů"</string>
+    <string name="contacts_storage_device_only_preference_label" msgid="970250816918108264">"Pouze zařízení"</string>
+    <string name="contacts_storage_device_only_preference_summary" msgid="2339782491812039153">"Nové kontakty se nebudou synchronizovat s účtem"</string>
+    <string name="contacts_storage_selection_message" msgid="8082077300632059003">"Kontakty se ve výchozím nastavení uloží do zařízení a synchronizují s účtem"</string>
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Žádné výchozí nastavení"</string>
+    <string name="contacts_storage_first_time_add_account_message" msgid="5161093169928132323">"Začněte tím, že přidáte účet"</string>
 </resources>
