--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -1951,13 +1951,26 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"Barrierefreiheit"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"Physische Tastatur"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"Bounce-Tasten"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"Schnell aufeinanderfolgende Betätigungen derselben Taste innerhalb von <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> ms werden auf der Tastatur ignoriert"</string>
+    <!-- no translation found for bounce_keys_summary (7418024428905737729) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_title (4088646362538368693) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_subtitle (5640575860258120026) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_option_200 (7876774697200082558) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_option_400 (8146580138675322657) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_option_600 (6166166103942612488) -->
+    <skip />
     <string name="slow_keys" msgid="2891452895499690837">"Anschlagverzögerung"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"Zeit zum Aktivieren eines Tastendrucks wird auf <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> ms festgelegt"</string>
+    <!-- no translation found for slow_keys_summary (2914214326648535377) -->
+    <skip />
     <string name="sticky_keys" msgid="7317317044898161747">"Einfingerbedienung"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"Bei Tastenkombinationen Tasten einzeln drücken, statt sie zusammen gedrückt zu halten"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"Maustasten"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"Die Maus kann über die physische Tastatur gesteuert werden"</string>
+    <!-- no translation found for mouse_keys_summary (7030731235143286467) -->
+    <skip />
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"Tastenkürzel"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"Liste der Tastenkombinationen anzeigen"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"Tastaturen und Tools für das Arbeitsprofil"</string>
@@ -2026,6 +2039,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Wähle eine neue Taste für <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"Bedienungshilfen für physische Tastaturen"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"Einfingerbedienung, Bounce-Tasten, Maustasten"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"Layout: <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Standard"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Automatisch: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2430,7 +2447,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"Vorschau"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"Standardoptionen"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"Sprache"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"Textgröße"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"Untertitelstil"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"Benutzerdefinierte Optionen"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"Hintergrundfarbe"</string>
@@ -3808,8 +3826,7 @@
     <string name="zen_mode_from_important_conversations_second" msgid="7588299891972136599">"vorrangige Unterhaltungen"</string>
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Keine"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Keine}=1{1 Unterhaltung}other{# Unterhaltungen}}"</string>
-    <!-- no translation found for zen_mode_from_conversations_settings (2411930666794576607) -->
-    <skip />
+    <string name="zen_mode_from_conversations_settings" msgid="2411930666794576607">"Einstellungen für Unterhaltungen"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Wer unterbrechen darf"</string>
     <string name="zen_mode_people_footer" msgid="7710707353004137431">"Nachrichten- oder Anruf-Apps können dich zwar nicht benachrichtigen, aber die von dir hier ausgewählten Nutzer können dich trotzdem über diese Apps erreichen"</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Anrufe"</string>
@@ -3833,10 +3850,8 @@
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Alle"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Kontakte"</string>
     <string name="zen_mode_from_starred" msgid="8616516644241652287">"Markierte Kontakte"</string>
-    <!-- no translation found for zen_mode_from_contacts_settings (853428575138439415) -->
-    <skip />
-    <!-- no translation found for zen_mode_from_starred_settings (3389516761063134119) -->
-    <skip />
+    <string name="zen_mode_from_contacts_settings" msgid="853428575138439415">"Kontakteinstellungen"</string>
+    <string name="zen_mode_from_starred_settings" msgid="3389516761063134119">"Einstellungen für markierte Kontakte"</string>
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Keine"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Keine"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Wecker"</string>
@@ -3866,8 +3881,7 @@
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Keine App kann ihn unterbrechen}=1{{app_1} kann ihn unterbrechen}=2{{app_1} und {app_2} können ihn unterbrechen}=3{{app_1}, {app_2} und {app_3} können ihn unterbrechen}other{{app_1}, {app_2}, und # weitere können ihn unterbrechen}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (geschäftlich)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Wird berechnet…"</string>
-    <!-- no translation found for zen_mode_apps_priority_apps_settings (5544513568250354374) -->
-    <skip />
+    <string name="zen_mode_apps_priority_apps_settings" msgid="5544513568250354374">"Apps-Einstellungen"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"+ <xliff:g id="NUMBER">%d</xliff:g>"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Überschreiben durch Apps zulassen"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Apps, die unterbrechen dürfen"</string>
@@ -5454,5 +5468,13 @@
     <string name="homepage_search" msgid="6759334912284663559">"In Einstellungen suchen"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"Kontakte, Speicher, Konto"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Kontakte-Speicher"</string>
+    <!-- no translation found for contacts_storage_device_only_preference_label (970250816918108264) -->
+    <skip />
+    <!-- no translation found for contacts_storage_device_only_preference_summary (2339782491812039153) -->
+    <skip />
+    <!-- no translation found for contacts_storage_selection_message (8082077300632059003) -->
+    <skip />
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Kein Standard festgelegt"</string>
+    <!-- no translation found for contacts_storage_first_time_add_account_message (5161093169928132323) -->
+    <skip />
 </resources>
