--- a/res/values-en-rCA/strings.xml
+++ b/res/values-en-rCA/strings.xml
@@ -1946,13 +1946,18 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"Accessibility"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"Physical keyboard"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"Bounce keys"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"The keyboard ignores quickly repeated presses of the same key within <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> ms"</string>
+    <string name="bounce_keys_summary" msgid="7418024428905737729">"The keyboard ignores quickly repeated presses of the same key"</string>
+    <string name="bounce_keys_dialog_title" msgid="4088646362538368693">"Bounce key threshold"</string>
+    <string name="bounce_keys_dialog_subtitle" msgid="5640575860258120026">"Choose the duration of time your keyboard ignores repeated key presses"</string>
+    <string name="bounce_keys_dialog_option_200" msgid="7876774697200082558">"0.2s"</string>
+    <string name="bounce_keys_dialog_option_400" msgid="8146580138675322657">"0.4s"</string>
+    <string name="bounce_keys_dialog_option_600" msgid="6166166103942612488">"0.6s"</string>
     <string name="slow_keys" msgid="2891452895499690837">"Slow keys"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"Adjusts the time it takes for a key press to activate to <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> ms"</string>
+    <string name="slow_keys_summary" msgid="2914214326648535377">"Adjusts the time it takes for a key press to activate"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"Sticky keys"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"Press one key at a time for shortcuts instead of holding keys down together"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"Mouse keys"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"Use the physical keyboard to control the mouse."</string>
+    <string name="mouse_keys_summary" msgid="7030731235143286467">"Use your keyboard to control the pointer"</string>
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"Keyboard shortcuts"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"Show list of shortcuts"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"Work profile keyboards &amp; tools"</string>
@@ -2021,6 +2026,8 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Choose a new key for <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"Physical keyboard accessibility"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"Sticky keys, Bounce keys, Mouse keys"</string>
+    <string name="keyboard_repeat_key_title" msgid="3641350808120194549">"Repeat Keys"</string>
+    <string name="keyboard_repeat_key_summary" msgid="3970350989341158854">"Hold down a key to repeat its character until the key is released"</string>
     <string name="ime_label_title" msgid="8994569521516807168">"<xliff:g id="IME_LABEL">%s</xliff:g> layout"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Default"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Automatic: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2425,7 +2432,7 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"Preview"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"Standard options"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"Language"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"Text size"</string>
+    <string name="captioning_text_size" msgid="5764254558945371745">"Caption size"</string>
     <string name="captioning_preset" msgid="4174276086501638524">"Caption style"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"Custom options"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"Background color"</string>
@@ -5444,5 +5451,9 @@
     <string name="homepage_search" msgid="6759334912284663559">"Search Settings"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"contacts, storage, account"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Contacts storage"</string>
+    <string name="contacts_storage_device_only_preference_label" msgid="970250816918108264">"Device only"</string>
+    <string name="contacts_storage_device_only_preference_summary" msgid="2339782491812039153">"New contacts won\'t be synced with an account"</string>
+    <string name="contacts_storage_selection_message" msgid="8082077300632059003">"Contacts will be saved to your device and synced to your account by default"</string>
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"No default set"</string>
+    <string name="contacts_storage_first_time_add_account_message" msgid="5161093169928132323">"Add an account to get started"</string>
 </resources>
