--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -659,12 +659,9 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"તમારી ખાનગી સ્પેસ માટે પૅટર્ન સેટ કરો"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"લૉક કરો"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"છુપાવો"</string>
-    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
-    <skip />
+    <string name="private_space_confirm_your_pattern_header" msgid="449382220134788771">"તમારી ખાનગી સ્પેસની પૅટર્ન કન્ફર્મ કરો"</string>
+    <string name="private_space_confirm_your_pin_header" msgid="4543332157470087796">"તમારી ખાનગી સ્પેસની પિન કન્ફર્મ કરો"</string>
+    <string name="private_space_confirm_your_password_header" msgid="9202308075814307169">"તમારી ખાનગી સ્પેસનો પાસવર્ડ ફરીથી દાખલ કરો"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"તમે <xliff:g id="COUNT">%d</xliff:g> જેટલી ફિંગરપ્રિન્ટ ઉમેરી શકો છો"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"તમે મહત્તમ ફિંગરપ્રિન્ટ્સ ઉમેર્યા છે"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"વધુ ફિંગરપ્રિન્ટ્સ ઉમેરી શકતાં નથી"</string>
@@ -1032,10 +1029,8 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"પાસવર્ડ ચેક કરો અને ફરી પ્રયાસ કરો"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"ડિવાઇસ નિર્માતાનો સંપર્ક કરો"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"કનેક્શન ચેક કરો અને ફરી પ્રયાસ કરો"</string>
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
-    <skip />
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
-    <skip />
+    <string name="wifi_dpp_check_connection_no_matched_ssid" msgid="3608318690698685427">"અત્યારે આ વાઇ-ફાઇ નેટવર્ક ઉપલબ્ધ નથી"</string>
+    <string name="wifi_dpp_check_connection_no_matched_security" msgid="1462706753123341376">"આ QR કોડમાં કોઈ સમસ્યા છે. અન્ય કોઈ રીતે કનેક્ટ કરવાનો પ્રયાસ કરો."</string>
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"નેટવર્ક પસંદ કરો"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"તમારા ડિવાઇસને કનેક્ટ કરવા માટે, નેટવર્ક પસંદ કરો"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"આ ડિવાઇસને  “<xliff:g id="SSID">%1$s</xliff:g>” પર ઉમેરીએ?"</string>
@@ -1951,13 +1946,18 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"ઍક્સેસિબિલિટી"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"ભૌતિક કીબોર્ડ"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"બાઉન્સ કી"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"<xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> msની અંદર એક જ કીને વારંવાર ઝડપથી દબાવવાની પ્રક્રિયાની કીબોર્ડ અવગણના કરે છે"</string>
+    <string name="bounce_keys_summary" msgid="7418024428905737729">"એક જ કીને વારંવાર ઝડપથી દબાવવાની પ્રક્રિયાની કીબોર્ડ અવગણના કરે છે"</string>
+    <string name="bounce_keys_dialog_title" msgid="4088646362538368693">"બાઉન્સ કી સંબંધિત મર્યાદા"</string>
+    <string name="bounce_keys_dialog_subtitle" msgid="5640575860258120026">"વારંવાર દબાવવામાં આવતી તમારા કીબોર્ડની કીને અવગણવા માટે જરૂરી અવધિ પસંદ કરો"</string>
+    <string name="bounce_keys_dialog_option_200" msgid="7876774697200082558">"0.2 સેકન્ડ"</string>
+    <string name="bounce_keys_dialog_option_400" msgid="8146580138675322657">"0.4 સેકન્ડ"</string>
+    <string name="bounce_keys_dialog_option_600" msgid="6166166103942612488">"0.6 સેકન્ડ"</string>
     <string name="slow_keys" msgid="2891452895499690837">"ધીમી કી"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"<xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> ms સુધીમાં સક્રિય થવા માટે, કોઈ કીને દબાવવામાં લાગતા સમયની ગોઠવણી કરે છે"</string>
+    <string name="slow_keys_summary" msgid="2914214326648535377">"કોઈ કીને દબાવવાથી સક્રિય થવામાં લાગતા સમયમાં વધઘટ કરે છે"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"સ્ટીકી કી"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"શૉર્ટકટ માટે કીને એકસાથે દબાવી રાખવાને બદલે એક સમયે એક જ કી દબાવો"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"માઉસની કી"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"માઉસને નિયંત્રિત કરવા માટે, વાસ્તવિક કીબોર્ડનો ઉપયોગ કરો."</string>
+    <string name="mouse_keys_summary" msgid="7030731235143286467">"પૉઇન્ટરનું નિયંત્રણ કરવા માટે, તમારા કીબોર્ડનો ઉપયોગ કરો"</string>
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"કીબોર્ડ શૉર્ટકટ"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"શૉર્ટકટની સૂચિ બતાવો"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"કાર્યાલયનું પ્રોફાઇલ અને સાધનો"</string>
@@ -2026,6 +2026,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g> માટે નવી કી પસંદ કરો:"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"વાસ્તવિક કીબોર્ડની ઍક્સેસિબિલિટી"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"સ્ટીકી કી, બાઉન્સ કી, માઉસ કી"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"<xliff:g id="IME_LABEL">%s</xliff:g> લેઆઉટ"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"ડિફૉલ્ટ"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"ઑટોમૅટિક રીતે: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2430,7 +2434,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"પ્રીવ્યૂ"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"સ્ટૅન્ડર્ડ વિકલ્પો"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"ભાષા"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"ટેક્સ્ટ કદ"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"કૅપ્શન શૈલી"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"કસ્ટમ વિકલ્પો"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"બૅકગ્રાઉન્ડ રંગ"</string>
@@ -3906,8 +3911,7 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"કોઈ મોડ બનાવો"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"કસ્ટમ મોડ"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"મોડનું નામ"</string>
-    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
-    <skip />
+    <string name="zen_mode_edit_name_empty_error" msgid="5788063278827188275">"મોડનું નામ ખાલી હોઈ શકતું નથી"</string>
     <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"કોઈ આઇકન પસંદ કરો"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"કૅલેન્ડર ઇવેન્ટ"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"બેડટાઇમ રૂટિન"</string>
@@ -5450,5 +5454,9 @@
     <string name="homepage_search" msgid="6759334912284663559">"સેટિંગમાં શોધો"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"સંપર્કો, સ્ટોરેજ, એકાઉન્ટ"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"સંપર્કો માટે સ્ટોરેજ"</string>
+    <string name="contacts_storage_device_only_preference_label" msgid="970250816918108264">"ફક્ત ડિવાઇસ"</string>
+    <string name="contacts_storage_device_only_preference_summary" msgid="2339782491812039153">"નવા સંપર્કોને કોઈ એકાઉન્ટ સાથે સિંક કરવામાં આવશે નહીં"</string>
+    <string name="contacts_storage_selection_message" msgid="8082077300632059003">"ડિફૉલ્ટ તરીકે, સંપર્કોને તમારા ડિવાઇસમાં સાચવવામાં આવશે અને તેને તમારા એકાઉન્ટ સાથે સિંક કરવામાં આવશે"</string>
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"કોઈ ડિફૉલ્ટ સેટ નથી"</string>
+    <string name="contacts_storage_first_time_add_account_message" msgid="5161093169928132323">"શરૂ કરવા માટે કોઈ એકાઉન્ટ ઉમેરો"</string>
 </resources>
