--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1946,13 +1946,18 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"ユーザー補助"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"物理キーボード"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"バウンスキー"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"<xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> ミリ秒以内にキーボードの同じキーが連続で押された場合は、その操作を無視します"</string>
+    <string name="bounce_keys_summary" msgid="7418024428905737729">"キーボードの同じキーが連続で押された場合は、その操作を無視します"</string>
+    <string name="bounce_keys_dialog_title" msgid="4088646362538368693">"バウンスキーのしきい値"</string>
+    <string name="bounce_keys_dialog_subtitle" msgid="5640575860258120026">"キーボードのキーが連続で押されても無視する時間を選択します"</string>
+    <string name="bounce_keys_dialog_option_200" msgid="7876774697200082558">"0.2s"</string>
+    <string name="bounce_keys_dialog_option_400" msgid="8146580138675322657">"0.4s"</string>
+    <string name="bounce_keys_dialog_option_600" msgid="6166166103942612488">"0.6s"</string>
     <string name="slow_keys" msgid="2891452895499690837">"スローキー"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"押されたキーが有効になるまでの時間を <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> ミリ秒に設定します"</string>
+    <string name="slow_keys_summary" msgid="2914214326648535377">"押されたキーが有効になるまでの時間を設定します"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"固定キー"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"ショートカットで複数のキーを同時に押すのではなく 1 つずつ押します"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"マウスキー"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"物理キーボードを使用してマウスを操作します"</string>
+    <string name="mouse_keys_summary" msgid="7030731235143286467">"キーボードを使用してポインタを操作します"</string>
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"キーボード ショートカット"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"ショートカットのリストを表示"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"仕事用プロファイルのキーボードとツール"</string>
@@ -2021,6 +2026,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g> の新しいキーを選択してください"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"物理キーボードのユーザー補助"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"固定キー、バウンスキー、マウスキー"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"レイアウト: <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"デフォルト"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"自動: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2425,7 +2434,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"プレビュー"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"標準オプション"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"言語"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"文字サイズ"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"字幕スタイル"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"カスタマイズオプション"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"背景色"</string>
@@ -5444,5 +5454,9 @@
     <string name="homepage_search" msgid="6759334912284663559">"検索設定"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"連絡先, ストレージ, アカウント"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"連絡先アプリのストレージ"</string>
+    <string name="contacts_storage_device_only_preference_label" msgid="970250816918108264">"デバイスのみ"</string>
+    <string name="contacts_storage_device_only_preference_summary" msgid="2339782491812039153">"新しい連絡先はアカウントと同期されません"</string>
+    <string name="contacts_storage_selection_message" msgid="8082077300632059003">"デフォルトでは、連絡先はデバイスに保存されて、アカウントと同期されます"</string>
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"デフォルトは設定されていません"</string>
+    <string name="contacts_storage_first_time_add_account_message" msgid="5161093169928132323">"開始するにはアカウントを追加してください"</string>
 </resources>
