--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -659,12 +659,9 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"तुमच्या खाजगी स्पेससाठी पॅटर्न सेट करा"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"लॉक"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"लपवा"</string>
-    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
-    <skip />
+    <string name="private_space_confirm_your_pattern_header" msgid="449382220134788771">"तुमचा खाजगी स्पेस पॅटर्न कन्फर्म करा"</string>
+    <string name="private_space_confirm_your_pin_header" msgid="4543332157470087796">"तुमचा खाजगी स्पेस पिन पुन्हा एंटर करा"</string>
+    <string name="private_space_confirm_your_password_header" msgid="9202308075814307169">"तुमचा खाजगी स्पेस पासवर्ड पुन्हा एंटर करा"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"तुम्ही <xliff:g id="COUNT">%d</xliff:g> पर्यंत फिंगरप्रिंट जोडू शकता"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"तुम्ही जास्तीत जास्त फिंगरप्रिंट जोडले आहेत"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"आणखी फिंगरप्रिंट जोडू शकत नाही"</string>
@@ -1032,10 +1029,8 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"पासवर्ड तपासा आणि पुन्हा प्रयत्न करा"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"डिव्हाइसच्या निर्मात्याशी संपर्क साधा"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"कनेक्शन तपासा आणि पुन्हा प्रयत्न करा"</string>
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
-    <skip />
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
-    <skip />
+    <string name="wifi_dpp_check_connection_no_matched_ssid" msgid="3608318690698685427">"हे वाय-फाय नेटवर्क सध्या उपलब्ध नाही"</string>
+    <string name="wifi_dpp_check_connection_no_matched_security" msgid="1462706753123341376">"या QR कोडमध्ये समस्या आहे. दुसऱ्या पद्धतीने कनेक्ट करण्याचा प्रयत्न करा."</string>
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"नेटवर्क निवडा"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"तुमच्या डिव्हाइसशी कनेक्ट करण्यासाठी, नेटवर्क निवडा"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"हे डिव्हाइस “<xliff:g id="SSID">%1$s</xliff:g>” वर जोडायचे?"</string>
@@ -1951,13 +1946,18 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"अ‍ॅक्सेसिबिलिटी"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"वास्तविक कीबोर्ड"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"बाउन्स की"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"कीबोर्ड <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> मिसेमध्ये एकच की वारंवार प्रेस करण्याकडे दुर्लक्ष करतो"</string>
+    <string name="bounce_keys_summary" msgid="7418024428905737729">"कीबोर्ड एकसारख्या की झटपट वारंवार प्रेस करण्याकडे दुर्लक्ष करतो"</string>
+    <string name="bounce_keys_dialog_title" msgid="4088646362538368693">"बाउन्स कीची मर्यादा"</string>
+    <string name="bounce_keys_dialog_subtitle" msgid="5640575860258120026">"तुमचा कीबोर्ड वारंवार की प्रेस करण्याकडे दुर्लक्ष करतो तो कालावधी निवडा"</string>
+    <string name="bounce_keys_dialog_option_200" msgid="7876774697200082558">"०.२से"</string>
+    <string name="bounce_keys_dialog_option_400" msgid="8146580138675322657">"०.४से"</string>
+    <string name="bounce_keys_dialog_option_600" msgid="6166166103942612488">"०.६से"</string>
     <string name="slow_keys" msgid="2891452895499690837">"स्लो की"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"<xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> मिसेपर्यंत अ‍ॅक्टिव्हेट होण्यासाठी की प्रेस करण्याकरिता लागणारा वेळ अ‍ॅडजस्ट करा"</string>
+    <string name="slow_keys_summary" msgid="2914214326648535377">"ॲक्टिव्हेट करण्यासाठी की प्रेस करण्याकरिता लागणारा वेळ ॲडजस्ट करतात"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"स्टिकी की"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"की एकत्र धरून ठेवण्याऐवजी शॉर्टकटसाठी एकावेळी एक की प्रेस करा"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"माउस की"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"माउस नियंत्रणासाठी वास्तविक कीबोर्ड वापरा."</string>
+    <string name="mouse_keys_summary" msgid="7030731235143286467">"पॉइंटर नियंत्रित करण्यासाठी तुमचा कीबोर्ड वापरा"</string>
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"कीबोर्ड शॉर्टकट"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"शॉर्टकटची सूची दाखवा"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"कार्य प्रोफाइल कीबोर्ड आणि टूल"</string>
@@ -2026,6 +2026,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g> साठी नवीन की निवडा:"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"वास्तविक कीबोर्ड अ‍ॅक्सेसिबिलिटी"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"स्टिकी की, बाउन्स की, माउस की"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"<xliff:g id="IME_LABEL">%s</xliff:g> लेआउट"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"डीफॉल्ट"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"ऑटोमॅटिक: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2430,7 +2434,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"पूर्वावलोकन"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"मानक पर्याय"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"भाषा"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"मजकूर आकार"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"कॅप्शन शैली"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"कस्टम पर्याय"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"बॅकग्राउंडचा रंग"</string>
@@ -3697,7 +3702,7 @@
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"या अ‍ॅपमध्ये अधिक सेटिंग्ज उपलब्ध आहेत"</string>
     <string name="notification_polite_title" msgid="6121016426991791557">"नोटिफिकेशन कूलडाउन"</string>
     <string name="notification_polite_main_control_title" msgid="5812529809151927149">"नोटिफिकेशन कूलडाउन वापरा"</string>
-    <string name="notification_polite_description" msgid="5497748284893832854">"तुम्हाला थोड्या कालावधीमध्ये बरीच नोटिफिकेशन मिळतात, तेव्हा तुमचे डिव्हाइस त्याचा व्हॉल्यूम कमी करेल आणि स्क्रीनवरील सूचनांना २ मिनिटांपर्यंत कमी करेल. कॉल, अलार्म आणि प्राधान्य दिलेल्या संभाषणांवर परिणाम होत नाहीत. \n\nकूलडाउनदरम्यान मिळालेल्या सूचना स्क्रीनच्या वरून खालपर्यंत स्वाइप करून शोधल्या जाऊ शकतात."</string>
+    <string name="notification_polite_description" msgid="5497748284893832854">"तुम्हाला थोड्या कालावधीमध्ये बरीच नोटिफिकेशन मिळतात, तेव्हा तुमचे डिव्हाइस त्याचा व्हॉल्यूम कमी करेल आणि स्क्रीनवरील सूचनांना २ मिनिटांपर्यंत कमी करेल. कॉल, अलार्म आणि प्राधान्य दिलेल्या संभाषणांवर परिणाम होत नाहीत. \n\nकूलडाउनदरम्यान मिळालेली नोटिफिकेशन स्क्रीनच्या वरून खालपर्यंत स्वाइप करून शोधली जाऊ शकतात."</string>
     <string name="notification_polite_work" msgid="8823596456640216391">"कार्य प्रोफाइलला लागू करा"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"कार्य प्रोफाइलच्या अ‍ॅप्सना लागू करा"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR मदतनीस सेवा"</string>
@@ -3906,8 +3911,7 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"मोड तयार करा"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"कस्टम मोड"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"मोडचे नाव"</string>
-    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
-    <skip />
+    <string name="zen_mode_edit_name_empty_error" msgid="5788063278827188275">"मोडचे नाव रिक्त असू शकत नाही"</string>
     <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"आयकन निवडा"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"कॅलेंडर इव्हेंट"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"झोपतानाचे वेळापत्रक"</string>
@@ -5450,5 +5454,9 @@
     <string name="homepage_search" msgid="6759334912284663559">"शोध सेटिंग्ज"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"संपर्क, स्टोरेज, खाते"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"संपर्क स्टोरेज"</string>
+    <string name="contacts_storage_device_only_preference_label" msgid="970250816918108264">"केवळ डिव्हाइस"</string>
+    <string name="contacts_storage_device_only_preference_summary" msgid="2339782491812039153">"खात्यासह नवीन संपर्क सिंक केले जाणार नाहीत"</string>
+    <string name="contacts_storage_selection_message" msgid="8082077300632059003">"संपर्क हे तुमच्या डिव्हाइसमध्ये सेव्ह केले जातील आणि बाय डीफॉल्ट तुमच्या खात्यामध्ये सिंक केले जातील"</string>
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"कोणतेही डीफॉल्ट अकाउंट सेट केलेले नाही"</string>
+    <string name="contacts_storage_first_time_add_account_message" msgid="5161093169928132323">"सुरू करण्यासाठी एखादे खाते जोडा"</string>
 </resources>
