--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -659,12 +659,9 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Stel een patroon in voor privégedeelte"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Vergrendelen"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Verbergen"</string>
-    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
-    <skip />
+    <string name="private_space_confirm_your_pattern_header" msgid="449382220134788771">"Bevestig het patroon voor je privégedeelte"</string>
+    <string name="private_space_confirm_your_pin_header" msgid="4543332157470087796">"Voer de pincode voor je privégedeelte opnieuw in"</string>
+    <string name="private_space_confirm_your_password_header" msgid="9202308075814307169">"Voer het wachtwoord voor je privégedeelte weer in"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Je kunt maximaal <xliff:g id="COUNT">%d</xliff:g> vingerafdrukken toevoegen"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Je hebt het maximale aantal vingerafdrukken toegevoegd"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Kan geen extra vingerafdrukken toevoegen"</string>
@@ -1032,10 +1029,8 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Controleer het wachtwoord en probeer het opnieuw"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Neem contact op met de fabrikant van het apparaat"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Controleer de verbinding en probeer het opnieuw"</string>
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
-    <skip />
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
-    <skip />
+    <string name="wifi_dpp_check_connection_no_matched_ssid" msgid="3608318690698685427">"Dit wifi-netwerk is op dit moment niet beschikbaar"</string>
+    <string name="wifi_dpp_check_connection_no_matched_security" msgid="1462706753123341376">"Er is een probleem met deze QR-code. Probeer op een andere manier verbinding te maken."</string>
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Netwerk kiezen"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Kies een netwerk om je apparaat te verbinden"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Dit apparaat toevoegen aan \'<xliff:g id="SSID">%1$s</xliff:g>\'?"</string>
@@ -1951,13 +1946,18 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"Toegankelijkheid"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"Fysiek toetsenbord"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"Bouncetoetsen"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"Het toetsenbord negeert het binnen <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> ms snel herhaald indrukken van dezelfde toets"</string>
+    <string name="bounce_keys_summary" msgid="7418024428905737729">"Het toetsenbord negeert snel herhaald indrukken van dezelfde toets"</string>
+    <string name="bounce_keys_dialog_title" msgid="4088646362538368693">"Drempelwaarde voor stuitertoetsen"</string>
+    <string name="bounce_keys_dialog_subtitle" msgid="5640575860258120026">"Kies hoelang je toetsenbord herhaald indrukken van toetsen negeert"</string>
+    <string name="bounce_keys_dialog_option_200" msgid="7876774697200082558">"0,2 s"</string>
+    <string name="bounce_keys_dialog_option_400" msgid="8146580138675322657">"0,4 s"</string>
+    <string name="bounce_keys_dialog_option_600" msgid="6166166103942612488">"0,6 s"</string>
     <string name="slow_keys" msgid="2891452895499690837">"Langzame toetsen"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"Past de tijd voordat een toetsaanslag wordt geactiveerd aan naar <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> ms"</string>
+    <string name="slow_keys_summary" msgid="2914214326648535377">"Past de tijd voordat een toetsaanslag wordt geactiveerd aan"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"Plaktoetsen"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"Druk toetsen één voor één in voor snelkoppelingen in plaats van meerdere toetsen tegelijkertijd"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"Muisknoppen"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"Gebruik het fysieke toetsenbord om de muis te bedienen."</string>
+    <string name="mouse_keys_summary" msgid="7030731235143286467">"Gebruik je toetsenbord om de cursor te bedienen"</string>
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"Sneltoetsen"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"Toon lijst met sneltoetsen"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"Toetsenborden en tools van werkprofiel"</string>
@@ -2026,6 +2026,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Kies een nieuwe toets voor <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"Toegankelijkheid met fysiek toetsenbord"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"Plaktoetsen, bouncetoetsen, muisknoppen"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"Indeling: <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Standaard"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Automatisch: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2430,7 +2434,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"Voorbeeld"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"Standaardopties"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"Taal"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"Lettergrootte"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"Ondertitelstijl"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"Aangepaste opties"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"Achtergrondkleur"</string>
@@ -3906,8 +3911,7 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Modus maken"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Aangepaste modus"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Naam van modus"</string>
-    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
-    <skip />
+    <string name="zen_mode_edit_name_empty_error" msgid="5788063278827188275">"De naam van de modus mag niet leeg zijn"</string>
     <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Kies een icoon"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Agenda-afspraken"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Bedtijdroutine"</string>
@@ -5450,5 +5454,9 @@
     <string name="homepage_search" msgid="6759334912284663559">"Zoeken in Instellingen"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"contacten, opslag, account"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Opslag voor contacten"</string>
+    <string name="contacts_storage_device_only_preference_label" msgid="970250816918108264">"Alleen apparaat"</string>
+    <string name="contacts_storage_device_only_preference_summary" msgid="2339782491812039153">"Nieuwe contacten worden niet gesynchroniseerd met een account"</string>
+    <string name="contacts_storage_selection_message" msgid="8082077300632059003">"Contacten worden standaard opgeslagen op je apparaat en gesynchroniseerd met je account"</string>
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Geen standaard ingesteld"</string>
+    <string name="contacts_storage_first_time_add_account_message" msgid="5161093169928132323">"Voeg een account toe om aan de slag te gaan"</string>
 </resources>
