--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -659,12 +659,9 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"ନିଜ ପ୍ରାଇଭେଟ ସ୍ପେସ ପାଇଁ ଏକ ପାଟର୍ନ ସେଟ କର"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"ଲକ କରନ୍ତୁ"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"ଲୁଚାନ୍ତୁ"</string>
-    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
-    <skip />
+    <string name="private_space_confirm_your_pattern_header" msgid="449382220134788771">"ଆପଣଙ୍କ ପ୍ରାଇଭେଟ ସ୍ପେସ ପାଟର୍ନ ସୁନିଶ୍ଚିତ କରନ୍ତୁ"</string>
+    <string name="private_space_confirm_your_pin_header" msgid="4543332157470087796">"ଆପଣଙ୍କ ପ୍ରାଇଭେଟ ସ୍ପେସ PIN ପୁଣି ଲେଖନ୍ତୁ"</string>
+    <string name="private_space_confirm_your_password_header" msgid="9202308075814307169">"ଆପଣଙ୍କ ପ୍ରାଇଭେଟ ସ୍ପେସ ପାସୱାର୍ଡ ପୁଣି ଲେଖନ୍ତୁ"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"ଆପଣ ସର୍ବାଧିକ <xliff:g id="COUNT">%d</xliff:g> ଟିପଚିହ୍ନ ଯୋଗ କରିପାରିବେ"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"ଆପଣ ସର୍ବାଧିକ ସଂଖ୍ୟାର ଆଙ୍ଗୁଠି ଚିହ୍ନ ଯୋଡିଛନ୍ତି"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"ଆଉ ଅଧିକ ଟିପଚିହ୍ନ ଯୋଡିପାରିବ ନାହିଁ"</string>
@@ -1032,10 +1029,8 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"ପାସ୍‍ୱାର୍ଡର ଯାଞ୍ଚ କରନ୍ତୁ ଏବଂ ପୁଣି ଚେଷ୍ଟା କରନ୍ତୁ"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"ଡିଭାଇସର ନିର୍ମାତାଙ୍କ ସହିତ କଣ୍ଟାକ୍ଟ କରନ୍ତୁ"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"ସଂଯୋଗ ଯାଞ୍ଚ କରି ପୁଣି ଚେଷ୍ଟା କରନ୍ତୁ"</string>
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
-    <skip />
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
-    <skip />
+    <string name="wifi_dpp_check_connection_no_matched_ssid" msgid="3608318690698685427">"ଏହି ୱାଇ-ଫାଇ ନେଟୱାର୍କ ବର୍ତ୍ତମାନ ଉପଲବ୍ଧ ନାହିଁ"</string>
+    <string name="wifi_dpp_check_connection_no_matched_security" msgid="1462706753123341376">"ଏହି QR କୋଡରେ ଏକ ସମସ୍ୟା ଅଛି। ଅନ୍ୟ ଏକ ଉପାୟରେ କନେକ୍ଟ କରିବାକୁ ଚେଷ୍ଟା କରନ୍ତୁ।"</string>
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"ନେଟୱାର୍କ ବାଛନ୍ତୁ"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"ଆପଣଙ୍କ ଡିଭାଇସ୍‍ ସହ ସଂଯୋଗ କରିବାକୁ, ଏକ ନେ‍ଟ୍‍ୱର୍କ ବାଛନ୍ତୁ"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"“<xliff:g id="SSID">%1$s</xliff:g>”ରେ ଏହି ଡିିିିଭାଇସ୍‍ ଯୋଗ କରିିିବେ?"</string>
@@ -1951,13 +1946,26 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"ଆକ୍ସେସିବିଲିଟୀ"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"ଫିଜିକାଲ୍ କୀବୋର୍ଡ"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"ବାଉନ୍ସ କୀଗୁଡ଼ିକ"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"କୀବୋର୍ଡ <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> ms ମଧ୍ୟରେ ସମାନ କୀ ଶୀଘ୍ର ବାରମ୍ବାର ଦବାଇବାକୁ ଅଣଦେଖା କରେ"</string>
+    <!-- no translation found for bounce_keys_summary (7418024428905737729) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_title (4088646362538368693) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_subtitle (5640575860258120026) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_option_200 (7876774697200082558) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_option_400 (8146580138675322657) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_option_600 (6166166103942612488) -->
+    <skip />
     <string name="slow_keys" msgid="2891452895499690837">"ଶ୍ଲୋ କୀଗୁଡ଼ିକ"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"<xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> msକୁ ସକ୍ରିୟ କରିବାକୁ ଏକ କୀ ଦବାଇବା ପାଇଁ ଲାଗୁଥିବା ସମୟକୁ ଏହା ଆଡଜଷ୍ଟ କରେ"</string>
+    <!-- no translation found for slow_keys_summary (2914214326648535377) -->
+    <skip />
     <string name="sticky_keys" msgid="7317317044898161747">"ଷ୍ଟିକି କୀଗୁଡ଼ିକ"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"ଏକାଠି କୀଗୁଡ଼ିକୁ ଦବାଇ ଧରିବା ପରିବର୍ତ୍ତେ ସର୍ଟକର୍ଟଗୁଡ଼ିକ ପାଇଁ ଥରକେ ଗୋଟିଏ କୀ ଦବାନ୍ତୁ"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"ମାଉସ କୀଗୁଡ଼ିକ"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"ମାଉସକୁ ନିୟନ୍ତ୍ରଣ କରିବା ପାଇଁ ଫିଜିକାଲ କୀବୋର୍ଡ ବ୍ୟବହାର କରନ୍ତୁ।"</string>
+    <!-- no translation found for mouse_keys_summary (7030731235143286467) -->
+    <skip />
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"କୀବୋର୍ଡ଼ ସର୍ଟକଟଗୁଡ଼ିକ"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"ସର୍ଟକଟଗୁଡ଼ିକର ତାଲିକା ଦେଖାନ୍ତୁ"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"ୱର୍କ ପ୍ରୋଫାଇଲ୍ କୀବୋର୍ଡ &amp; ଟୁଲ୍‌ଗୁଡ଼ିକ"</string>
@@ -2026,6 +2034,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g> ପାଇଁ ଏକ ନୂଆ କୀ ବାଛନ୍ତୁ:"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"ଫିଜିକାଲ କୀବୋର୍ଡ ଆକ୍ସେସିବିଲିଟୀ"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"ଷ୍ଟିକି କୀ, ବାଉନ୍ସ କୀ, ମାଉସ କୀ"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"<xliff:g id="IME_LABEL">%s</xliff:g> ଲେଆଉଟ"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"ପୂର୍ବ-ନିର୍ଦ୍ଧାରିତ"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"ସ୍ୱତଃ: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2430,7 +2442,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"ପ୍ରିଭ୍ୟୁ"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"ଷ୍ଟାଣ୍ଡାର୍ଡ ବିକଳ୍ପଗୁଡ଼ିକ"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"ଭାଷା"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"ଟେକ୍ସଟର ଆକାର"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"କ୍ୟାପସନ୍‌ ଷ୍ଟାଇଲ୍‌"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"କଷ୍ଟମ୍‌ ବିକଳ୍ପଗୁଡିକ"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"ପୃଷ୍ଠପଟ ରଙ୍ଗ"</string>
@@ -3906,8 +3919,7 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"ଏକ ମୋଡ ତିଆରି କରନ୍ତୁ"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"କଷ୍ଟମ ମୋଡ"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"ମୋଡର ନାମ"</string>
-    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
-    <skip />
+    <string name="zen_mode_edit_name_empty_error" msgid="5788063278827188275">"ମୋଡ ନାମ ଖାଲି ରହିପାରିବ ନାହିଁ"</string>
     <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"ଏକ ଆଇକନ ବାଛନ୍ତୁ"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"କେଲେଣ୍ଡର ଇଭେଣ୍ଟଗୁଡ଼ିକ"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"ଶୋଇବା ସମୟ ରୁଟିନ"</string>
@@ -5451,5 +5463,13 @@
     <string name="homepage_search" msgid="6759334912284663559">"ସର୍ଚ୍ଚ ସେଟିଂସ"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"କଣ୍ଟାକ୍ଟ, ଷ୍ଟୋରେଜ, ଆକାଉଣ୍ଟ"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"କଣ୍ଟାକ୍ଟ ଷ୍ଟୋରେଜ"</string>
+    <!-- no translation found for contacts_storage_device_only_preference_label (970250816918108264) -->
+    <skip />
+    <!-- no translation found for contacts_storage_device_only_preference_summary (2339782491812039153) -->
+    <skip />
+    <!-- no translation found for contacts_storage_selection_message (8082077300632059003) -->
+    <skip />
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"କୌଣସି ଡିଫଲ୍ଟ ଆକାଉଣ୍ଟ ସେଟ କରାଯାଇନାହିଁ"</string>
+    <!-- no translation found for contacts_storage_first_time_add_account_message (5161093169928132323) -->
+    <skip />
 </resources>
