--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -659,12 +659,9 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Создайте ключ для личного пространства"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Блокировка"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Ограничение доступа"</string>
-    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
-    <skip />
+    <string name="private_space_confirm_your_pattern_header" msgid="449382220134788771">"Подтвердите ключ для частного пространства"</string>
+    <string name="private_space_confirm_your_pin_header" msgid="4543332157470087796">"Подтвердите PIN-код для частного пространства"</string>
+    <string name="private_space_confirm_your_password_header" msgid="9202308075814307169">"Подтвердите пароль для частного пространства"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Максимальное количество отпечатков пальца, которые можно добавить: <xliff:g id="COUNT">%d</xliff:g>"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Вы уже добавили максимальное количество отпечатков"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Больше нельзя добавить отпечатки пальцев"</string>
@@ -1032,10 +1029,8 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Проверьте пароль и повторите попытку."</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Обратитесь к производителю устройства."</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Проверьте подключение и повторите попытку."</string>
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
-    <skip />
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
-    <skip />
+    <string name="wifi_dpp_check_connection_no_matched_ssid" msgid="3608318690698685427">"Эта сеть Wi-Fi сейчас недоступна"</string>
+    <string name="wifi_dpp_check_connection_no_matched_security" msgid="1462706753123341376">"Возникла проблема с этим QR-кодом. Попробуйте другой способ подключения."</string>
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Выбор сети"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Чтобы подключить устройство, выберите сеть."</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Подключить это устройство к сети \"<xliff:g id="SSID">%1$s</xliff:g>\"?"</string>
@@ -1951,13 +1946,26 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"Специальные возможности"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"Физическая клавиатура"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"Контроль повторного нажатия"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"Повторные нажатия одной клавиши в течение <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> мс игнорируются"</string>
+    <!-- no translation found for bounce_keys_summary (7418024428905737729) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_title (4088646362538368693) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_subtitle (5640575860258120026) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_option_200 (7876774697200082558) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_option_400 (8146580138675322657) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_option_600 (6166166103942612488) -->
+    <skip />
     <string name="slow_keys" msgid="2891452895499690837">"Медленные клавиши"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"Нажатие клавиши регистрируется по истечении заданного времени: <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> мс"</string>
+    <!-- no translation found for slow_keys_summary (2914214326648535377) -->
+    <skip />
     <string name="sticky_keys" msgid="7317317044898161747">"Залипание клавиш"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"Вместо того чтобы удерживать вместе все клавиши из сочетания, нажимайте их по одной"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"Клавиши управления мышью"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"Управлять мышью с помощью физической клавиатуры"</string>
+    <!-- no translation found for mouse_keys_summary (7030731235143286467) -->
+    <skip />
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"Быстрые клавиши"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"Показывать список сочетаний клавиш"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"Клавиатуры и инструменты рабочего профиля"</string>
@@ -2026,6 +2034,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Выберите новую клавишу для <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"Специальные возможности для физической клавиатуры"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"Залипание клавиш, контроль повторного нажатия, клавиши управления мышью"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"Раскладка \"<xliff:g id="IME_LABEL">%s</xliff:g>\""</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"По умолчанию"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Автоматически: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2430,7 +2442,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"Предпросмотр"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"Стандартные настройки"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"Язык"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"Размер шрифта"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"Стиль субтитров"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"Собственные настройки"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"Цвет фона"</string>
@@ -3906,8 +3919,7 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Создание режима"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Пользовательский режим"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Название режима"</string>
-    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
-    <skip />
+    <string name="zen_mode_edit_name_empty_error" msgid="5788063278827188275">"Укажите название режима."</string>
     <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Выберите значок"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Мероприятия из календаря"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Режим сна"</string>
@@ -5452,5 +5464,13 @@
     <string name="homepage_search" msgid="6759334912284663559">"Поиск по настройкам"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"контакты, хранилище, аккаунт"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Контакты"</string>
+    <!-- no translation found for contacts_storage_device_only_preference_label (970250816918108264) -->
+    <skip />
+    <!-- no translation found for contacts_storage_device_only_preference_summary (2339782491812039153) -->
+    <skip />
+    <!-- no translation found for contacts_storage_selection_message (8082077300632059003) -->
+    <skip />
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Аккаунт по умолчанию не задан"</string>
+    <!-- no translation found for contacts_storage_first_time_add_account_message (5161093169928132323) -->
+    <skip />
 </resources>
