--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -659,12 +659,9 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"ඔබේ පෞද්ගලික අවකාශය සඳහා රටාවක් සකසන්න"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"අගුලු දමන්න"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"සඟවන්න"</string>
-    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
-    <skip />
+    <string name="private_space_confirm_your_pattern_header" msgid="449382220134788771">"ඔබේ රහසිගත අවකාශයේ රටාව තහවුරු කරන්න"</string>
+    <string name="private_space_confirm_your_pin_header" msgid="4543332157470087796">"ඔබේ රහසිගත අවකාශයේ PIN නැවත ඇතුළු කරන්න"</string>
+    <string name="private_space_confirm_your_password_header" msgid="9202308075814307169">"ඔබේ රහසිගත අවකාශයේ මුරපදය නැවත ඇතුළු කරන්න"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"ඔබට ඇඟිලි සලකුණු <xliff:g id="COUNT">%d</xliff:g> දක්වා එකතු කළ හැකිය"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"ඔබ ඇඟිලි සලකුණු උපරිම සංඛ්‍යාව එක් කර ඇත"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"තවත් ඇඟිලි සලකුණු එක් කළ නොහැකිය"</string>
@@ -1032,10 +1029,8 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"මුරපදය පරීක්ෂා කර නැවත උත්සාහ කරන්න"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"උපාංග නිෂ්පාදක අමතන්න"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"සම්බන්ධතාව පරීක්‍ෂා කර නැවත උත්සාහ කරන්න"</string>
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
-    <skip />
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
-    <skip />
+    <string name="wifi_dpp_check_connection_no_matched_ssid" msgid="3608318690698685427">"මෙම Wi-Fi ජාලය දැන් ලබා ගත නොහැක"</string>
+    <string name="wifi_dpp_check_connection_no_matched_security" msgid="1462706753123341376">"මෙම QR කේතය සමග ගැටළුවක් ඇත. වෙනත් ආකාරයකින් සම්බන්ධ කිරීමට උත්සාහ කරන්න."</string>
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"ජාලය තෝරන්න"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"ඔබේ උපාංගය සම්බන්ධ කිරීමට, ජාලයක් තෝරන්න"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"මෙම උපාංගය “<xliff:g id="SSID">%1$s</xliff:g>”ට එක් කරන්නේද?"</string>
@@ -1951,13 +1946,26 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"ප්‍රවේශ්‍යතාව"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"භෞතික යතුරු පුවරුව"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"පනින යතුරු"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"යතුරුපුවරුව <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> ms ඇතුළත එකම යතුර නැවත නැවතත් එබීම් නොසලකා හරියි"</string>
+    <!-- no translation found for bounce_keys_summary (7418024428905737729) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_title (4088646362538368693) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_subtitle (5640575860258120026) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_option_200 (7876774697200082558) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_option_400 (8146580138675322657) -->
+    <skip />
+    <!-- no translation found for bounce_keys_dialog_option_600 (6166166103942612488) -->
+    <skip />
     <string name="slow_keys" msgid="2891452895499690837">"මන්දගාමී යතුරු"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"යතුරු එබීම සඳහා ගතවන කාලය <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> ms දක්වා සකසයි"</string>
+    <!-- no translation found for slow_keys_summary (2914214326648535377) -->
+    <skip />
     <string name="sticky_keys" msgid="7317317044898161747">"ඇලෙන යතුරු"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"කෙටිමං සඳහා යතුරු එකට තබා ගැනීම වෙනුවට වරකට යතුරක් ඔබන්න"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"මූසික යතුරු"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"මූසිකය පාලනය කිරීමට භෞතික යතුරු පුවරුව භාවිතා කරන්න."</string>
+    <!-- no translation found for mouse_keys_summary (7030731235143286467) -->
+    <skip />
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"යතුරු පුවරු කෙටිමං"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"කෙටිමං ලැයිස්තුව පෙන්වන්න"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"කාර්යාල පැතිකඩ යතුරු පුවරු සහ මෙවලම්"</string>
@@ -2026,6 +2034,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g> සඳහා නව යතුරක් තෝරා ගන්න:"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"භෞතික යතුරුපුවරු ප්‍රවේශ්‍යතාව"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"ඇලෙන යතුරු, පනින යතුරු, මූසික යතුරු"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"<xliff:g id="IME_LABEL">%s</xliff:g> පිරිසැලසුම"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"පෙරනිමි"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"ස්වයංක්‍රීය: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2430,7 +2442,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"පෙරදසුන"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"සාමාන්‍ය විකල්ප"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"භාෂාව"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"පෙළ ප්‍රමාණය"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"සිරස්තල මෝස්තරය"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"අභිරුචි විකල්ප"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"පසුබිම් වර්ණය"</string>
@@ -3906,8 +3919,7 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"ප්‍රකාරයක් තනන්න"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"අභිරුචි ප්‍රකාරය"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"ප්‍රකාරයේ නම"</string>
-    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
-    <skip />
+    <string name="zen_mode_edit_name_empty_error" msgid="5788063278827188275">"ප්‍රකාරයේ නම හිස් විය නොහැක"</string>
     <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"නිරූපකයක් තෝරා ගන්න"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"දින දර්ශන සිදුවීම්"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"නින්දට යන වේලාවේ දින චර්යාව"</string>
@@ -5450,5 +5462,13 @@
     <string name="homepage_search" msgid="6759334912284663559">"සෙවීමේ සැකසීම්"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"සම්බන්ධතා, ආචයනය, ගිණුම"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"සම්බන්ධතා ආචයනය"</string>
+    <!-- no translation found for contacts_storage_device_only_preference_label (970250816918108264) -->
+    <skip />
+    <!-- no translation found for contacts_storage_device_only_preference_summary (2339782491812039153) -->
+    <skip />
+    <!-- no translation found for contacts_storage_selection_message (8082077300632059003) -->
+    <skip />
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"පෙරනිමි සැකසීමක් නැත"</string>
+    <!-- no translation found for contacts_storage_first_time_add_account_message (5161093169928132323) -->
+    <skip />
 </resources>
