--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -659,12 +659,9 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Подесите образац за приватни простор"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Закључај"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Сакриј"</string>
-    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
-    <skip />
+    <string name="private_space_confirm_your_pattern_header" msgid="449382220134788771">"Потврдите шаблон за приватан простор"</string>
+    <string name="private_space_confirm_your_pin_header" msgid="4543332157470087796">"Поново унесите PIN за приватан простор"</string>
+    <string name="private_space_confirm_your_password_header" msgid="9202308075814307169">"Поново унесите лозинку за приватан простор"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Можете да их додате до <xliff:g id="COUNT">%d</xliff:g>"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Додали сте максималан број отисака прстију"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Не можете да додате још отисака прстију"</string>
@@ -1032,10 +1029,8 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"Проверите лозинку и пробајте поново"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"Обратите се произвођачу уређаја"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"Проверите везу и пробајте поново"</string>
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
-    <skip />
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
-    <skip />
+    <string name="wifi_dpp_check_connection_no_matched_ssid" msgid="3608318690698685427">"Ова WiFi мрежа тренутно није доступна"</string>
+    <string name="wifi_dpp_check_connection_no_matched_security" msgid="1462706753123341376">"Постоји проблем са овим QR кодом. Пробајте да се повежете на други начин."</string>
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"Одаберите мрежу"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"Да бисте повезали уређај, одаберите мрежу"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"Желите ли да додате овај уређај на мрежу „<xliff:g id="SSID">%1$s</xliff:g>“?"</string>
@@ -1951,13 +1946,18 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"Приступачност"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"Физичка тастатура"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"Дужи одзив тастера"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"Тастатура занемарује брзе притиске истог тастера који се понављају у року од <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> ms"</string>
+    <string name="bounce_keys_summary" msgid="7418024428905737729">"Тастатура занемарује брзе притиске истог тастера који се понављају"</string>
+    <string name="bounce_keys_dialog_title" msgid="4088646362538368693">"Праг за дужи одзив тастера"</string>
+    <string name="bounce_keys_dialog_subtitle" msgid="5640575860258120026">"Одаберите колико дуго тастатура занемарује понављане притиске тастера"</string>
+    <string name="bounce_keys_dialog_option_200" msgid="7876774697200082558">"0,2 сек"</string>
+    <string name="bounce_keys_dialog_option_400" msgid="8146580138675322657">"0,4 сек"</string>
+    <string name="bounce_keys_dialog_option_600" msgid="6166166103942612488">"0,6 сек"</string>
     <string name="slow_keys" msgid="2891452895499690837">"Спори тастери"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"Приладите време потребно да се тастер активира после притиска на <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> ms"</string>
+    <string name="slow_keys_summary" msgid="2914214326648535377">"Прилагодите време за активирање тастера после притиска"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"Лепљиви тастери"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"Притискајте један по један тастер да бисте користили пречице уместо да истовремено држите тастере"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"Тастери миша"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"Користите физичку тастатуру да бисте управљали мишем."</string>
+    <string name="mouse_keys_summary" msgid="7030731235143286467">"Контролишите показивач помоћу тастатуре"</string>
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"Тастерске пречице"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"Приказује листу пречица"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"Тастатуре и алатке за пословни профил"</string>
@@ -2026,6 +2026,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Одаберите нови тастер за <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"Приступачност физичке тастатуре"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"Лепљиви тастери, дужи одзив тастера, тастери миша"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"Распоред <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Подразумевано"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Аутоматски: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2430,7 +2434,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"Преглед"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"Стандардне опције"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"Језик"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"Величина текста"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"Стил титла"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"Прилагођене опције"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"Боја позадине"</string>
@@ -3906,8 +3911,7 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Направите режим"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Прилагођени режим"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Назив режима"</string>
-    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
-    <skip />
+    <string name="zen_mode_edit_name_empty_error" msgid="5788063278827188275">"Поље за назив режима не може бити празно"</string>
     <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"Одаберите икону"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"Догађаји у календару"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"Рутина времена за спавање"</string>
@@ -5451,5 +5455,9 @@
     <string name="homepage_search" msgid="6759334912284663559">"Подешавања претраге"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"контакти, меморијски простор, налог"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Меморијски простор за контакте"</string>
+    <string name="contacts_storage_device_only_preference_label" msgid="970250816918108264">"Само уређај"</string>
+    <string name="contacts_storage_device_only_preference_summary" msgid="2339782491812039153">"Нови контакти се неће синхронизовати са налогом"</string>
+    <string name="contacts_storage_selection_message" msgid="8082077300632059003">"Контакти се подразумевано чувају на уређају и синхронизују са налогом"</string>
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Није подешен подразумевани налог"</string>
+    <string name="contacts_storage_first_time_add_account_message" msgid="5161093169928132323">"Додајте налог да бисте започели"</string>
 </resources>
