--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -1946,13 +1946,18 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"Tillgänglighet"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"Fysiskt tangentbord"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"Studsande tangenter"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"Tangentbordet ignorerar snabbt upprepade tryck på samma tangent inom <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> ms"</string>
+    <string name="bounce_keys_summary" msgid="7418024428905737729">"Tangentbordet ignorerar snabbt upprepade tryck på samma tangent"</string>
+    <string name="bounce_keys_dialog_title" msgid="4088646362538368693">"Gräns för studsande tangent"</string>
+    <string name="bounce_keys_dialog_subtitle" msgid="5640575860258120026">"Välj hur länge tangentbordet ska ignorera upprepade tangenttryckningar"</string>
+    <string name="bounce_keys_dialog_option_200" msgid="7876774697200082558">"0,2 s"</string>
+    <string name="bounce_keys_dialog_option_400" msgid="8146580138675322657">"0,4 s"</string>
+    <string name="bounce_keys_dialog_option_600" msgid="6166166103942612488">"0,6 s"</string>
     <string name="slow_keys" msgid="2891452895499690837">"Långsamma tangenter"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"Justera tiden det tar innan ett tryck på en tangent aktiveras till <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> ms"</string>
+    <string name="slow_keys_summary" msgid="2914214326648535377">"Justerar tiden det tar innan ett tryck på en tangent aktiveras"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"Låstangentsläge"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"Tryck ned en tangent i taget för kortkommandon i stället för att hålla ned flera tangenter samtidigt"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"Musknappar"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"Använd det fysiska tangentbordet för att styra musen."</string>
+    <string name="mouse_keys_summary" msgid="7030731235143286467">"Använd tangentbordet för att styra pekaren"</string>
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"Kortkommandon"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"Visa en lista över genvägar"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"Tangentbord och verktyg för jobbprofilen"</string>
@@ -2021,6 +2026,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Välj en ny tangent för <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"Tillgänglighet för fysiskt tangentbord"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"Låstangentsläge, studsande tangenter, musknappar"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"Layouten <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Standard"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Automatiskt: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2425,7 +2434,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"Förhandsgranskning"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"Standardalternativ"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"Språk"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"Textstorlek"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"Textstil"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"Anpassade alternativ"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"Bakgrundsfärg"</string>
@@ -5444,5 +5454,9 @@
     <string name="homepage_search" msgid="6759334912284663559">"Sökinställningar"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"kontakter, lagring, konto"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"Kontaktlagring"</string>
+    <string name="contacts_storage_device_only_preference_label" msgid="970250816918108264">"Endast enheten"</string>
+    <string name="contacts_storage_device_only_preference_summary" msgid="2339782491812039153">"Nya kontakter synkroniseras inte med ett konto"</string>
+    <string name="contacts_storage_selection_message" msgid="8082077300632059003">"Kontakter sparas på enheten och synkroniseras med kontot som standard"</string>
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"Ingen standardinställning har angetts"</string>
+    <string name="contacts_storage_first_time_add_account_message" msgid="5161093169928132323">"Lägg till ett konto för att komma igång"</string>
 </resources>
