--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -659,12 +659,9 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"தனிப்பட்ட இடத்திற்கான பேட்டர்னை அமைத்தல்"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"லாக் செய்தல்"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"மறைத்தல்"</string>
-    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
-    <skip />
+    <string name="private_space_confirm_your_pattern_header" msgid="449382220134788771">"உங்கள் ரகசிய இடத்தின் பேட்டர்னை உறுதிப்படுத்துக"</string>
+    <string name="private_space_confirm_your_pin_header" msgid="4543332157470087796">"உங்கள் ரகசிய இடத்தின் பின்னை மீண்டும் டைப் செய்க"</string>
+    <string name="private_space_confirm_your_password_header" msgid="9202308075814307169">"ரகசிய இடத்தின் கடவுச்சொல்லை மீண்டும் டைப் செய்க"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"<xliff:g id="COUNT">%d</xliff:g> கைரேகைகள் வரை சேர்க்கலாம்"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"அனுமதிக்கப்படும் அதிகபட்சக் கைரேகைகளைச் சேர்த்துவிட்டீர்கள்"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"மேலும் கைரேகைகளைச் சேர்க்க முடியவில்லை"</string>
@@ -1032,10 +1029,8 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"கடவுச்சொல்லைச் சரிபார்த்து மீண்டும் முயலவும்"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"சாதன தயாரிப்பாளரைத் தொடர்புகொள்ளவும்"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"இணைப்பைச் சரிபார்த்து மீண்டும் முயலவும்"</string>
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
-    <skip />
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
-    <skip />
+    <string name="wifi_dpp_check_connection_no_matched_ssid" msgid="3608318690698685427">"இந்த வைஃபை நெட்வொர்க் தற்போது கிடைக்கவில்லை"</string>
+    <string name="wifi_dpp_check_connection_no_matched_security" msgid="1462706753123341376">"இந்த QR குறியீட்டில் சிக்கல் உள்ளது. வேறு முறையில் இணைக்க முயலவும்."</string>
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"நெட்வொர்க்கைத் தேர்வுசெய்தல்"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"உங்கள் சாதனத்தை இணைப்பதற்கு நெட்வொர்க் ஒன்றைத் தேர்வுசெய்யவும்"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"“<xliff:g id="SSID">%1$s</xliff:g>” இல் சாதனத்தைச் சேர்க்கவா?"</string>
@@ -1951,13 +1946,18 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"மாற்றுத்திறன் வசதி"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"கைமுறை கீபோர்டு"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"பவுன்ஸ் விசைகள்"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"<xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> மில்லி வினாடிக்குள் ஒரே பட்டனைத் தொடர்ச்சியாக அழுத்துவதைக் கீபோர்டு புறக்கணிக்கிறது"</string>
+    <string name="bounce_keys_summary" msgid="7418024428905737729">"ஒரே பட்டனைத் தொடர்ச்சியாக அழுத்துவதைக் கீபோர்டு விரைவாகப் புறக்கணிக்கிறது"</string>
+    <string name="bounce_keys_dialog_title" msgid="4088646362538368693">"பவுன்ஸ் பட்டன் வரம்பு"</string>
+    <string name="bounce_keys_dialog_subtitle" msgid="5640575860258120026">"தொடர்ச்சியாகப் பட்டன் அழுத்தப்படுவதைக் கீபோர்டு புறக்கணிப்பதற்கான கால அளவைத் தேர்வுசெய்யுங்கள்"</string>
+    <string name="bounce_keys_dialog_option_200" msgid="7876774697200082558">"0.2 வினாடி"</string>
+    <string name="bounce_keys_dialog_option_400" msgid="8146580138675322657">"0.4 வினாடி"</string>
+    <string name="bounce_keys_dialog_option_600" msgid="6166166103942612488">"0.6 வினாடி"</string>
     <string name="slow_keys" msgid="2891452895499690837">"ஸ்லோ கீஸ்"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"ஒரு பட்டனை அழுத்துவதற்கு எடுக்கும் நேரத்தை <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> மில்லி வினாடியாகச் சரிசெய்துகொள்கிறது"</string>
+    <string name="slow_keys_summary" msgid="2914214326648535377">"ஒரு பட்டனை அழுத்துவதற்கு எடுக்கும் நேரத்தை மாற்றலாம்"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"ஸ்டிக்கி கீஸ்"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"ஷார்ட்கட்களுக்கு பட்டன்களை ஒன்றாகப் பிடிப்பதற்குப் பதிலாக ஒரு நேரத்தில் ஒரு பட்டனை அழுத்தலாம்"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"மவுஸ் பட்டன்கள்"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"மவுஸைக் கட்டுப்படுத்த கீபோர்டைப் பயன்படுத்தவும்."</string>
+    <string name="mouse_keys_summary" msgid="7030731235143286467">"பாயிண்ட்டரைக் கட்டுப்படுத்த உங்கள் கீபோர்டைப் பயன்படுத்தலாம்"</string>
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"கீபோர்டு ஷார்ட்கட்கள்"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"ஷார்ட்கட்களின் பட்டியலைக் காட்டும்"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"பணிக் கணக்கிற்கான கீபோர்டுகள் &amp; கருவிகள்"</string>
@@ -2026,6 +2026,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>க்கு புதிய விசையை தேர்வுசெய்யலாம்:"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"கீபோர்டுக்கான மாற்றுத்திறன் வசதி"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"ஸ்டிக்கி கீஸ், பவுன்ஸ் கீஸ், மவுஸ் கீஸ்"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"<xliff:g id="IME_LABEL">%s</xliff:g> தளவமைப்பு"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"இயல்பு"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"தானியங்கு: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2430,7 +2434,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"முன்னோட்டம்"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"நிலையான விருப்பங்கள்"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"மொழி"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"எழுத்தின் அளவு"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"வசனத்தின் நடை"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"பிரத்தியேக விருப்பங்கள்"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"பின்புல வண்ணம்"</string>
@@ -3906,8 +3911,7 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"பயன்முறை உருவாக்குதல்"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"பிரத்தியேகப் பயன்முறை"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"பயன்முறையின் பெயர்"</string>
-    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
-    <skip />
+    <string name="zen_mode_edit_name_empty_error" msgid="5788063278827188275">"பயன்முறை பெயர் காலியாக இருக்கக்கூடாது"</string>
     <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"ஐகானைத் தேர்வுசெய்யுங்கள்"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"கேலெண்டர் நிகழ்வுகள்"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"உறக்கநேர வழக்கம்"</string>
@@ -5450,5 +5454,9 @@
     <string name="homepage_search" msgid="6759334912284663559">"அமைப்புகளைத் தேடுங்கள்"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"தொடர்புகள், சேமிப்பகம், கணக்கு"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"தொடர்புகள் சேமிப்பகம்"</string>
+    <string name="contacts_storage_device_only_preference_label" msgid="970250816918108264">"சாதனம் மட்டும்"</string>
+    <string name="contacts_storage_device_only_preference_summary" msgid="2339782491812039153">"புதிய தொடர்புகளை ஒரு கணக்குடன் ஒத்திசைக்க முடியாது"</string>
+    <string name="contacts_storage_selection_message" msgid="8082077300632059003">"இயல்பாகவே தொடர்புகள் உங்கள் சாதனத்தில் சேமிக்கப்படும், உங்கள் கணக்குடன் ஒத்திசைக்கப்படும்"</string>
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"இயல்புநிலையாக எதுவும் அமைக்கப்படவில்லை"</string>
+    <string name="contacts_storage_first_time_add_account_message" msgid="5161093169928132323">"தொடங்குவதற்கு ஒரு கணக்கைச் சேருங்கள்"</string>
 </resources>
