--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -659,12 +659,9 @@
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"మీ ప్రైవేట్ స్పేస్ కోసం ఆకృతి సెట్ చేయి"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"లాక్ చేయండి"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"దాచండి"</string>
-    <!-- no translation found for private_space_confirm_your_pattern_header (449382220134788771) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_pin_header (4543332157470087796) -->
-    <skip />
-    <!-- no translation found for private_space_confirm_your_password_header (9202308075814307169) -->
-    <skip />
+    <string name="private_space_confirm_your_pattern_header" msgid="449382220134788771">"మీ ప్రైవేట్ స్పేస్ ఆకృతిని నిర్ధారించండి"</string>
+    <string name="private_space_confirm_your_pin_header" msgid="4543332157470087796">"మీ ప్రైవేట్ స్పేస్ PINను మళ్లీ ఎంటర్ చేయండి"</string>
+    <string name="private_space_confirm_your_password_header" msgid="9202308075814307169">"మీ ప్రైవేట్ స్పేస్ పాస్‌వర్డ్‌ను రీ-ఎంటర్ చేయండి"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"మీరు గరిష్ఠంగా <xliff:g id="COUNT">%d</xliff:g> వేలిముద్రలను జోడించవచ్చు"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"మీరు గరిష్ట సంఖ్యలో వేలిముద్రలను జోడించారు"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"మరిన్ని వేలిముద్రలను జోడించడం సాధ్యపడదు"</string>
@@ -1032,10 +1029,8 @@
     <string name="wifi_dpp_failure_enrollee_authentication" msgid="7008840843663520852">"మీ పాస్‌వర్డ్‌ని సరిచూసుకొని, మళ్లీ ట్రై చేయండి"</string>
     <string name="wifi_dpp_failure_enrollee_rejected_configuration" msgid="982310033782652478">"పరికరం తయారీదారుని సంప్రదించండి"</string>
     <string name="wifi_dpp_check_connection_try_again" msgid="6118892932595974823">"కనెక్షన్‌ను పరిశీలించి, మళ్లీ ట్రై చేయండి"</string>
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_ssid (3608318690698685427) -->
-    <skip />
-    <!-- no translation found for wifi_dpp_check_connection_no_matched_security (1462706753123341376) -->
-    <skip />
+    <string name="wifi_dpp_check_connection_no_matched_ssid" msgid="3608318690698685427">"ఈ Wi-Fi నెట్‌వర్క్ ప్రస్తుతం అందుబాటులో లేదు"</string>
+    <string name="wifi_dpp_check_connection_no_matched_security" msgid="1462706753123341376">"ఈ QR కోడ్‌తో సమస్య ఉంది. వేరొక విధంగా కనెక్ట్ చేయడానికి ట్రై చేయండి."</string>
     <string name="wifi_dpp_choose_network" msgid="3987007684129341427">"నెట్‌వర్క్‌ను ఎంచుకోండి"</string>
     <string name="wifi_dpp_choose_network_to_connect_device" msgid="4321618376432197593">"మీ పరికరాన్ని కనెక్ట్ చేయడానికి ఒక నెట్‌వర్క్‌ని ఎంచుకోండి"</string>
     <string name="wifi_dpp_add_device_to_wifi" msgid="5170095438763569255">"“<xliff:g id="SSID">%1$s</xliff:g>”కి ఈ పరికరాన్ని జోడించాలా?"</string>
@@ -1951,13 +1946,18 @@
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"యాక్సెసిబిలిటీ"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"భౌతిక కీబోర్డ్"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"బౌన్స్ కీలు"</string>
-    <string name="bounce_keys_summary" msgid="7347050868868080302">"ఏదైనా ఒక కీని <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> మిల్లీ సెకన్ల లోపు తిరిగి నొక్కితే కీబోర్డ్ దాన్ని విస్మరిస్తుంది"</string>
+    <string name="bounce_keys_summary" msgid="7418024428905737729">"ఏదైనా ఒక కీని వేగంగా మళ్లీ మళ్లీ నొక్కుతుంటే, కీబోర్డ్ దాన్ని విస్మరిస్తుంది"</string>
+    <string name="bounce_keys_dialog_title" msgid="4088646362538368693">"బౌన్స్ కీ పరిమితి"</string>
+    <string name="bounce_keys_dialog_subtitle" msgid="5640575860258120026">"ఏదైనా ఒక కీని మళ్లీ మళ్లీ నొక్కుతుంటే మీ కీబోర్డ్ దాన్ని ఎంత సమయం పాటు విస్మరించాలో ఎంచుకోండి"</string>
+    <string name="bounce_keys_dialog_option_200" msgid="7876774697200082558">"0.2 సెకన్లు"</string>
+    <string name="bounce_keys_dialog_option_400" msgid="8146580138675322657">"0.4 సెకన్లు"</string>
+    <string name="bounce_keys_dialog_option_600" msgid="6166166103942612488">"0.6 సెకన్లు"</string>
     <string name="slow_keys" msgid="2891452895499690837">"నిదానంగా పనిచేసే కీలు"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"ఒక కీని నొక్కితే, అది యాక్టివేట్ అయ్యేందుకు పట్టే సమయాన్ని <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> మిల్లీ సెకన్లకు మార్చుతుంది"</string>
+    <string name="slow_keys_summary" msgid="2914214326648535377">"ఒక కీని నొక్కితే, అది యాక్టివేట్ అయ్యేందుకు పట్టే సమయాన్ని సర్దుబాటు చేస్తుంది"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"స్టిక్కీ కీలు"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"షార్ట్‌కట్‌ల కోసం కీలను కలిపి హోల్డ్ చేయడానికి బదులు ఒకసారి ఒక కీని నొక్కండి"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"మౌస్ కీలు"</string>
-    <string name="mouse_keys_summary" msgid="2396247040177734245">"మౌస్‌ను కంట్రోల్ చేయడానికి ఫిజికల్ కీబోర్డ్‌ను ఉపయోగించండి."</string>
+    <string name="mouse_keys_summary" msgid="7030731235143286467">"మీ కీబోర్డ్‌ను ఉపయోగించి పాయింటర్‌ను కంట్రోల్ చేయండి"</string>
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"కీబోర్డ్ షార్ట్‌కట్‌లు"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"షార్ట్‌కట్‌ల లిస్ట్‌ను చూడండి"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"కార్యాలయ ప్రొఫైల్ కీబోర్డ్‌లు &amp; సాధనాలు"</string>
@@ -2026,6 +2026,10 @@
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g> కొసం కొత్త కీని ఎంచుకోండి:"</string>
     <string name="keyboard_a11y_settings" msgid="2564659018555385728">"ఫిజికల్ కీబోర్డ్ యాక్సెసిబిలిటీ"</string>
     <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"స్టిక్కీ కీలు, బౌన్స్ కీలు, మౌస్ కీలు"</string>
+    <!-- no translation found for keyboard_repeat_key_title (3641350808120194549) -->
+    <skip />
+    <!-- no translation found for keyboard_repeat_key_summary (3970350989341158854) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"<xliff:g id="IME_LABEL">%s</xliff:g> లేఅవుట్"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"ఆటోమేటిక్"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"ఆటోమేటిక్: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2430,7 +2434,8 @@
     <string name="captioning_preview_title" msgid="2888561631323180535">"ప్రివ్యూ"</string>
     <string name="captioning_standard_options_title" msgid="5360264497750980205">"స్టాండర్డ్ ఆప్షన్‌లు"</string>
     <string name="captioning_locale" msgid="5533303294290661590">"భాష"</string>
-    <string name="captioning_text_size" msgid="8039448543171463017">"టెక్స్ట్ సైజ్"</string>
+    <!-- no translation found for captioning_text_size (5764254558945371745) -->
+    <skip />
     <string name="captioning_preset" msgid="4174276086501638524">"క్యాప్షన్ స్టయిల్"</string>
     <string name="captioning_custom_options_title" msgid="3858866498893566351">"అనుకూల ఎంపికలు"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"నేపథ్య రంగు"</string>
@@ -3906,8 +3911,7 @@
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"మోడ్ క్రియేట్ చేయండి"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"అనుకూల మోడ్"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"మోడ్ పేరు"</string>
-    <!-- no translation found for zen_mode_edit_name_empty_error (5788063278827188275) -->
-    <skip />
+    <string name="zen_mode_edit_name_empty_error" msgid="5788063278827188275">"మోడ్ పేరు ఖాళీగా ఉండకూడదు"</string>
     <string name="zen_mode_edit_choose_icon_title" msgid="6452801577128788362">"చిహ్నాన్ని ఎంచుకోండి"</string>
     <string name="zen_mode_trigger_title_schedule_calendar" msgid="9206609438617550331">"క్యాలెండర్ ఈవెంట్‌లు"</string>
     <string name="zen_mode_trigger_title_bedtime" msgid="3287241454965736913">"నిద్రించే సమయ రొటీన్"</string>
@@ -5450,5 +5454,9 @@
     <string name="homepage_search" msgid="6759334912284663559">"సెట్టింగ్‌లలో సెర్చ్ చేయండి"</string>
     <string name="keywords_contacts_storage" msgid="9061213057165337893">"కాంటాక్ట్‌లు, స్టోరేజ్, ఖాతా"</string>
     <string name="contacts_storage_settings_title" msgid="1574030546525203810">"కాంటాక్ట్‌ల స్టోరేజ్"</string>
+    <string name="contacts_storage_device_only_preference_label" msgid="970250816918108264">"పరికరం మాత్రమే"</string>
+    <string name="contacts_storage_device_only_preference_summary" msgid="2339782491812039153">"కొత్త కాంటాక్ట్‌లు ఖాతాతో సింక్ అవ్వవు"</string>
+    <string name="contacts_storage_selection_message" msgid="8082077300632059003">"కాంటాక్ట్‌లు మీ పరికరంలో సేవ్ అయ్యి, ఆటోమేటిక్‌గా మీ ఖాతాకు సింక్ అవుతాయి"</string>
     <string name="contacts_storage_no_account_set" msgid="1548101985417720782">"ఆటోమేటిక్ సెట్టింగ్ సెట్ చేయబడలేదు"</string>
+    <string name="contacts_storage_first_time_add_account_message" msgid="5161093169928132323">"ప్రారంభించడానికి ఒక ఖాతాను జోడించండి"</string>
 </resources>
